--- a/public/stats.html
+++ b/public/stats.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="/api.js"></script>
-    <script src="/stats.js"></script>
+    <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/stats.js"></script>
   </body>
 </html>
